--- a/cs/version.props
+++ b/cs/version.props
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-<PropertyGroup>
-<VowpalWabbitAssemblyVersion>8.6.1.0</VowpalWabbitAssemblyVersion>
-</PropertyGroup>
+<Project ToolsVersion="12.0" DefaultTargets="Build" 
+    xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <PropertyGroup>
+        <!-- TODO: Make this come from one source of truth for this value -->
+        <VowpalWabbitAssemblyVersion Condition="'$(VowpalWabbitAssemblyVersion)' == ''">8.6.1.0</VowpalWabbitAssemblyVersion>
+    </PropertyGroup>
 </Project>
