--- a/.pipelines/build-windows-nuget.yml
+++ b/.pipelines/build-windows-nuget.yml
@@ -13,4 +13,6 @@ steps:
     .scripts/package.cmd
   env:
     Tag: +$(Build.SourceVersion)
+    nugetPath: $(Build.SourcesDirectory)\vowpalwabbit\.nuget\nuget.exe
+    DebugBuildScripts: 1
   failOnStderr: true
