--- a/.pipelines/build-windows-nuget.yml
+++ b/.pipelines/build-windows-nuget.yml
@@ -6,6 +6,15 @@ pool:
   demands: Cmd
 
 steps:
+- task: VisualStudioTestPlatformInstaller@1
+  inputs:
+    packageFeedSelector: 'nugetOrg' # Options: nugetOrg, customFeed, netShare
+    versionSelector: 'latestStable' # Required when packageFeedSelector == NugetOrg || PackageFeedSelector == CustomFeed# Options: latestPreRelease, latestStable, specificVersion
+    #testPlatformVersion: # Required when versionSelector == SpecificVersion
+    #customFeed: # Required when packageFeedSelector == CustomFeed
+    #username: # Optional
+    #password: # Optional
+    #netShare: # Required when packageFeedSelector == NetShare
 - script: |
     CALL .scripts/restore.cmd
     CALL .scripts/build.cmd
