--- a/.pipelines/build-windows-nuget.yml
+++ b/.pipelines/build-windows-nuget.yml
@@ -26,7 +26,6 @@ steps:
   env:
     Tag: +$(Build.SourceVersion)
     nugetPath: $(Build.SourcesDirectory)\vowpalwabbit\.nuget\nuget.exe
-    DebugBuildScripts: 1
   failOnStderr: true
 - script: CALL .scripts/test.cmd
   displayName: 'Run tests'
@@ -34,7 +33,8 @@ steps:
     Tag: +$(Build.SourceVersion)
     nugetPath: $(Build.SourcesDirectory)\vowpalwabbit\.nuget\nuget.exe
     DebugBuildScripts: 1
-  failOnStderr: false # TODO: change c_test to avoid spewing to stderr unless there is an actual error
+    SkipCSmokeTest: 1
+  failOnStderr: true
 - script: CALL .scripts/package.cmd
   displayName: 'Package artifacts'
   env:
