--- a/.pipelines/build-windows-nuget.yml
+++ b/.pipelines/build-windows-nuget.yml
@@ -33,8 +33,7 @@ steps:
     Tag: +$(Build.SourceVersion)
     nugetPath: $(Build.SourcesDirectory)\vowpalwabbit\.nuget\nuget.exe
     DebugBuildScripts: 1
-    SkipCSmokeTest: 1
-  failOnStderr: true
+  failOnStderr: false
 - script: CALL .scripts/package.cmd
   displayName: 'Package artifacts'
   env:
