--- a/cs/cli/vw_clr.vcxproj
+++ b/cs/cli/vw_clr.vcxproj
@@ -25,7 +25,10 @@
     <RootNamespace>vw_clr</RootNamespace>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\vowpalwabbit\</SolutionDir>
     <CodeAnalysisRuleSet>$(MSBuildProjectDirectory)\..\..\sdl\SDL-7.0-Recommended.ruleset</CodeAnalysisRuleSet>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <!-- There are no rules in the ruleset above that can run on this project type. Temporarily suppress running them
+         (same as pre-path-fix behaviour as checked in) until we either replace this with a non-C++/CLI binding or
+         find the correct ruleset to use. -->
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)'=='Debug'" Label="Configuration">
