Fix NuGet binary search paths

--- a/cs/cs_parallel/cs_parallel.nuspec
+++ b/cs/cs_parallel/cs_parallel.nuspec
@@ -20,9 +20,9 @@
   </metadata>
   <files>
 	  <!-- despite warning this is still required -->
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.Parallel.dll" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.Parallel.pdb" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.Parallel.xml" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.Parallel.dll" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.Parallel.pdb" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.Parallel.xml" target="lib\net45" />
   </files>
 </package>
 
