--- a/cs/cs/cs.nuspec
+++ b/cs/cs/cs.nuspec
@@ -14,17 +14,17 @@
   </metadata>
   <files>
 	  <!-- despite warning this is still required -->
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.dll" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.pdb" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.xml" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.dll" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.pdb" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.xml" target="lib\net45" />
 
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.Common.dll" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.Common.pdb" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.Common.xml" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.Common.dll" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.Common.pdb" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.Common.xml" target="lib\net45" />
 
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.Core.dll" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.Core.pdb" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.Core.xml" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.Core.dll" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.Core.pdb" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.Core.xml" target="lib\net45" />
 
 	  <file src="$RepoRoot$\cs\cs\**\*.cs" target="src\cs" exclude="**\obj\**\*.cs" />
 	  <file src="$RepoRoot$\cs\common\**\*.cs" target="src\common" exclude="**\obj\**\*.cs" />
