--- a/cs/cs_json/cs_json.nuspec
+++ b/cs/cs_json/cs_json.nuspec
@@ -20,9 +20,9 @@
   </metadata>
   <files>
 	  <!-- despite warning this is still required -->
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.JSON.dll" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.JSON.pdb" target="lib\net45" />
-	  <file src="$RootRelativeOutputDirX64$$Configuration$\VowpalWabbit.JSON.xml" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.JSON.dll" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.JSON.pdb" target="lib\net45" />
+	  <file src="$RootRelativeOutputDirX64$$Configuration$\$Platform$\VowpalWabbit.JSON.xml" target="lib\net45" />
   </files>
 </package>
 
